Refactoring: delete a strict test, fix formating